@@ -31,7 +31,8 @@ export(heplot, heplot3d, heplot1d, ellipse3d.axes, mark.H0, cross3d,
   	label.ellipse,
   	coefplot,
     boxM,
-    covEllipses
+    covEllipses,
+    colDevs
   	)
 
 S3method(heplot, mlm)
